--- a/src/main/resources/assets/style/main.less
+++ b/src/main/resources/assets/style/main.less
@@ -1,1 +1,15 @@
 @import "rcd-jsfwk-core";
+
+.foos-header {
+  position: fixed;
+  width: 100%;
+  height: 64px;
+  padding: 0 32px;
+  background-color: #002657;
+  color: #fff;
+
+  font-size: 24px;
+
+  display: flex;
+  align-items: center;
+}
