GraphQL, Routing & First view (#5)

--- a/src/main/resources/assets/style/main.less
+++ b/src/main/resources/assets/style/main.less
@@ -1,4 +1,7 @@
 @import "rcd-jsfwk-core";
+@import "common/icon";
+@import "league/league-item";
+@import "league/leagues-view";
 
 @header-size: 64px;
 @header-background-color: #002657;
