--- a/src/main/resources/assets/style/main.less
+++ b/src/main/resources/assets/style/main.less
@@ -26,3 +26,18 @@
   top: @header-size;
   bottom: 0;
 }
+
+table {
+  text-align: left;
+
+  td, tr {
+    display: flex;
+    align-items: center;
+  }
+  
+  .foos-icon {
+    width: 24px;
+    height: 24px;
+  }
+}
+
