--- a/src/main/resources/assets/style/main.less
+++ b/src/main/resources/assets/style/main.less
@@ -29,15 +29,18 @@
 
 table {
   text-align: left;
+}
 
-  td, tr {
-    display: flex;
-    align-items: center;
-  }
-  
+.foos-table-cell-name {
+  display: flex;
+  align-items: center;
+
   .foos-icon {
     width: 24px;
     height: 24px;
+    margin-right: 2px;
   }
 }
+
+
 
