Player ranking chart (#7)

--- a/src/main/resources/assets/style/main.less
+++ b/src/main/resources/assets/style/main.less
@@ -24,9 +24,12 @@ table {
   }
 }
 
+
+.foos-league-view {
+  display: flex;
+}
 .foos-ranking-chart {
-  height: 400px;
-  width: 400px;
+  flex-grow: 1;
 }
 
 
