--- a/src/main/resources/assets/style/main.less
+++ b/src/main/resources/assets/style/main.less
@@ -24,13 +24,14 @@ table {
   }
 }
 
-
 .foos-league-view {
   display: flex;
 }
+
 .foos-ranking-chart {
   flex-grow: 1;
-  
+
+  min-height: 500px;
   width: 0; //TODO What a strange library
 }
 
