League view - Teams (#9)

--- a/src/main/resources/assets/style/main.less
+++ b/src/main/resources/assets/style/main.less
@@ -2,6 +2,7 @@
 @import "common/icon";
 @import "shell/header";
 @import "shell/main";
+@import "league/ranking-panel";
 @import "league/league-item";
 @import "league/leagues-view";
 
