Player profile view - Player ranking position - Game statistics - Player radar chart

--- a/src/main/resources/assets/style/main.less
+++ b/src/main/resources/assets/style/main.less
@@ -5,6 +5,7 @@
 @import "league/ranking-panel";
 @import "league/league-item";
 @import "league/leagues-view";
+@import "player/player-profile";
 
 @header-size: 64px;
 @header-background-color: #002657;
